# health_care_premium

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: gui.py
app/artifact/: model_young.joblib
app/artifacts/: model_rest.joblib  model_young.joblib  scaler_rest.joblib  scaler_young.joblib
app/front_end/: prediction_helper.py
notebook/: data_cleaning.ipynb  dataset_splitter.ipynb  ml_prem_prediction.ipynb  ml_prem_prediction_rest_wit_gr.ipynb  ml_prem_prediction_young.ipynb  ml_premium_life_style.ipynb  ml_premium_life_style_rest copy.ipynb  ml_premium_life_style_rest.ipynb  ml_premium_life_style_young.ipynb
resources/: premiums_rest.xlsx  premiums_with_life_style_rest.xlsx  premiums_with_life_style_youngs.xlsx  premiums_youngs.xlsx
resources/artifact/: model_rest.joblib
